[GowriK] Refactor : In controller the eroor habling response is changed in swagger add the search api documentation
