# server/route/adminRoute.js
@@ -7,6 +7,6 @@ router.post("/books", authorize.authorize, admincontroller.addBook);
 router.get("/books", authorize.authorize, admincontroller.getAllBook);
 router.put("/books/:_id", authorize.authorize, admincontroller.updateBook);
 router.delete("/books/:_id", authorize.authorize, admincontroller.deleteBook);
-router.get("/books/:query", admincontroller.searchBook);
+router.get("/books/:query", authorize.authorize, admincontroller.searchBook);
 
 module.exports = router;
